browse service correct ui

--- a/views/layouts/main.ejs
+++ b/views/layouts/main.ejs
@@ -15,7 +15,7 @@
   <% if (locals.profilePage) { %>
     <link rel="stylesheet" href="/styles/profile.css">
   <% } %>
-  <% if (locals.servicePage) { %>
+  <% if (locals.servicePage || locals.searchPage || locals.detailPage) { %>
     <link rel="stylesheet" href="/styles/service.css">
   <% } %>
   <% if (locals.homePage) { %>
